fix layout issue with filter checkboxes

--- a/productview.less
+++ b/productview.less
@@ -81,9 +81,8 @@ ul.list li div.item-spotlight {
   color: @rg-gray;
   font-size: 11px;
   letter-spacing: 1px;
-  padding: 60px 15px 15px;
+  padding: 60px 15px 15px 35px;
   margin: 0;
-  width: 720px;
 }
 
 .filter-description label,
@@ -113,6 +112,11 @@ ul.list li div.item-spotlight {
 .filter-color label.disabled input,
 .filter-attributes label.disabled input {
   visibility: hidden;
+}
+
+.checkbox-inline+.checkbox-inline {
+margin-top: 0;
+margin-left: 0 !important;
 }
 
 #item-colors button.plain,
